resolved problem, now working

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -7,7 +7,7 @@ body{
     width: 1300px;
     overflow: auto;
     margin: 20px auto;
-    background: #8a6a30;
+    background: #f2c679;
     border:  20px solid #221408;
    /* background-image: url("plansza1919.png");*/
    /* background-repeat: no-repeat;*/
