--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -3,6 +3,25 @@ body{
     color: #666;
 
 }
+.button {
+    background-color: #645daf;
+    border: none;
+    color: #ff72e6;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+}
+#buttons{
+    width: 500px;
+    margin-right: 600px;
+   // background: #221408;
+
+
+}
 
 #board{
     width: 1300px;
